Fix profile image source in index.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main> 
         <section id="about">
             <h2>About Me</h2>
-            <img src="images/profile.jpeg" alt="Profile Photo" width="200" height="200" id="profile-pic">
+            <img src="profile.jpeg" alt="Profile Photo" width="200" height="200" id="profile-pic">
             <p>I’m a Business Analyst with 5 years of hands-on experience across diverse industries and product types from AI-powered solutions to HMIS, e-commerce platforms, SOE systems, and even enterprise data migration from Oracle to SAP.</p>
         </section>
 
@@ -52,3 +52,4 @@
     </footer>
 </body>
 </html>
+
