--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="personal-portfolio/style.css">
 </head>
 <body>
     <header>
@@ -52,4 +52,5 @@
     </footer>
 </body>
 </html>
+
 
